--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Shopping Nepal</title>
+    <title>ECOMM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
